--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root{
+    --a:0;
+}
 *{
     margin: 0px;
     padding: 0px;
@@ -103,6 +107,7 @@ body{
     border-radius: 5px;
     background-color: #252525;
     position: relative;
+    transition: all .9;
     
 }
 .card > *{
@@ -112,15 +117,21 @@ body{
     width: 100%;
     object-fit: contain;
 }
+.card:hover{
+    background-color: #606060;
+    cursor: pointer;
+    --a:1;
+}
 .play{
    position: absolute;
+   opacity: var(--a);
    top: 160px;
    right: 20px;
   
 
  } 
  .play .svg{
-    transition: all 1s ease-out;
+    transition: all .1s ease-out;
  }
  .buttons > *{
     margin: 0 12px;
@@ -254,7 +265,7 @@ gap: 14px;
     margin: 0px 20px;
 }
 
-@media (max-width: 1400px){
+@media (max-width: 1200px){
     .left{
      
         position: absolute;
@@ -290,7 +301,7 @@ gap: 14px;
         display: block;
     }
     .card{
-        width: 90vw;
+        width: 50vw;
     }
     .cardCantainer{
         justify-content: center;
@@ -308,13 +319,35 @@ gap: 14px;
     .songbtn{
         display: flex;
         justify-content: center;
-        margin-left: 80px;
+        margin-left:  250px;
+        
         margin-top: 35px;
         position: absolute;
     }
+    .play{
+        position: absolute;
+        top: 300px;
+        right: 20px;
+       
+     
+      } 
     
 
     
 
     
+}
+@media (max-width: 500px){
+    .card{
+        width: 90vw;
+    }
+    .songbtn{
+        display: flex;
+        justify-content: center;
+        margin-left:  100px;
+        
+        margin-top: 35px;
+        position: absolute;
+    }
+   
 }
